# predictFTC

./: Cargo.toml  README.md
cache/: matches.db
cache/2022/: cache.db
src/: database.rs  main.rs
src/insights/: insights_2022.rs  mod.rs
src/predictors/: mod.rs
src/predictors/PowerPlay/: basic_elo_2022.rs  mod.rs
src/scrapers/: mod.rs  scraper_2022.rs
